# book_api_project

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  populate_database_via_cli.py  pyproject.toml  requirements.txt  sample_books.json  wait_for_postgres.py
book_api_project/: asgi.py  settings.py  urls.py  wsgi.py
books/: decorators.py  models.py  serializers.py  test_decorators.py  test_models.py  test_views.py  views.py
books/management/commands/: populate_db_with_fake_books.py
books/migrations/: 0001_initial.py  0002_alter_book_isbn.py  0003_alter_book_options_and_more.py
